--- a/frontend/src/components/app/Line.css
+++ b/frontend/src/components/app/Line.css
@@ -1,24 +1,4 @@
-/* .dot {
-    height: 25px;
-    width: 25px;
-    background-color: #0099CC;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    border: 2px solid black; 
-  } */
-
-  .circle-black {
-    background-color: black;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-left: 5px;
-    transition: background-color 5s;
-  }
-  
-  .circle-red {
+  .circle {
     background-color: red;
     width: 10px;
     height: 10px;
@@ -28,6 +8,15 @@
     animation: blink 5s;
   }
   
+  .circleBlue {
+    background-color: blue;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 5px;
+    animation: blink 5s;
+  }
   @keyframes blink {
     0% {
       opacity: 1;
