--- a/frontend/src/components/line/TrainLine.css
+++ b/frontend/src/components/line/TrainLine.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   justify-content: space-between;
   margin: 20px 0;
-  
 }
 
 .line {
@@ -71,6 +70,27 @@ svg {
 
 .active {
   fill: var(--line-color);
+}
+
+.pulse {
+  animation-name: pulse;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .line-name {
