--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -3,7 +3,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat&family=Titillium+Web&display=swap');
 
 
-.App{
+.App2{
     max-width: 1280px;
     padding-bottom: 44px;
     border-radius: 4px;
