--- a/frontend/src/components/app/audioControl/AudioControl.module.css
+++ b/frontend/src/components/app/audioControl/AudioControl.module.css
@@ -13,12 +13,6 @@
     cursor: pointer;
 
 }
-.playnpause:active{
-    transform: scale(1.1);
-    border: 1px solid rgba(255, 0, 0);
-
-
-}
 .container{
     display: flex;
     max-height: 12px;
@@ -40,10 +34,16 @@ margin-left: auto;
 }
 
 
-input[type="range"] {
-    -webkit-appearance: none;
-    appearance: none;
-    background: transparent;
-    cursor: pointer;
-    width: 15rem;
+input {
+    display: inline-block !important;
+    border-radius: 0 !important;
+    border-width: 2px;
+    border-style: inset;
+    border-color: initial;
+    padding: 1px 2px;
+    font-size: initial;
+    line-height: normal;
+    font-family: initial;
+    color: initial;
+    background-color: initial;
   }
