--- a/frontend/src/components/homepage/Homepage.module.css
+++ b/frontend/src/components/homepage/Homepage.module.css
@@ -34,7 +34,8 @@
 .tracks,
 .features,
 .buttons,
-.theMap {
+.theMap,
+.jumbo {
   border: solid 1px #999;
   background-color: #fff;
   border-radius: 12px;
@@ -42,9 +43,18 @@
   margin-bottom: 12px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+.jumbo{
+  width: 99%;
+  margin-left:28px;
+}
 .theMap {
   overflow-x: auto;
+}
+.jumbo h1{
+  font-family: 'Cabin';
+  text-align: center;
+  font-size: 5rem;
+  color: #720f54;
 }
 .tracks h1,
 .features h1 {
