--- a/frontend/src/components/app/audioControl/AudioControl.module.css
+++ b/frontend/src/components/app/audioControl/AudioControl.module.css
@@ -15,17 +15,49 @@
 }
 .container{
     display: flex;
-    max-height: 12px;
 }
 
-.speaker{
-margin-left: auto;
-}
+
 .speaker img{
-    width:68px;
-    padding: 18px;
+    width:64px;
+    padding: 12px 0 0 0;
 
 }
+
+.instruct{
+    justify-content: left;
+    padding: 14px;
+    font-size: 1.8rem;
+}.playnpause {
+    transition: 0.3s;
+}
+
+.playnpause img{
+    padding:8px;
+    width:56px;
+    margin:12px 0 2px 12px;
+
+}
+.playnpause:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+}
+
+.volume{
+    display: flex;
+    flex-direction: column;  
+    align-items: center;
+    margin:0 12px 6px 0;
+    font-size: 0.8rem;
+
+}
+
 
 .instruct{
     justify-content: left;
@@ -34,16 +66,10 @@ margin-left: auto;
 }
 
 
-input {
-    display: inline-block !important;
-    border-radius: 0 !important;
-    border-width: 2px;
-    border-style: inset;
-    border-color: initial;
-    padding: 1px 2px;
-    font-size: initial;
-    line-height: normal;
-    font-family: initial;
-    color: initial;
-    background-color: initial;
+input[type="range"] {
+
+    cursor: pointer;
+    width: 4.6rem;
   }
+
+
