--- a/frontend/src/components/line/TrainLine.css
+++ b/frontend/src/components/line/TrainLine.css
@@ -72,27 +72,6 @@ svg {
   fill: var(--line-color);
 }
 
-.pulse {
-  animation-name: pulse;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1.2);
-    opacity: 0.5;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
 .line-name {
   margin: 10px 0 0 0;
   margin-left: 800px;
@@ -112,4 +91,37 @@ svg {
   .line {
     margin: 20px 0;
   }
+}
+
+@keyframes pulse {
+  0% {
+    fill: white;
+  }
+  15% {
+    fill: orange;
+  }
+  30% {
+    fill: red;
+  }
+  50% {
+    fill: orange;
+  }
+  70% {
+    fill: red;
+  }
+  85% {
+    fill: orange;
+  }
+  100% {
+    fill: white;
+  }
+}
+
+.pulse {
+  background-color: white;
+  fill: red;
+  stroke: black;
+  stroke-width: 4px;
+  animation-name: pulse;
+  animation-duration: 3s;  
 }
