--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -4,12 +4,12 @@
 
 
 .App{
-    max-width: 1280px;
+    max-width: 100%;
     padding-bottom: 44px;
     border-radius: 4px;
     background-color: #cddef6;
     margin: auto;
-    margin-top: 44px;
+    margin-top:0;
     padding: 44px;
     min-height: 400px;
     
