--- a/frontend/src/components/line/TrainLine.css
+++ b/frontend/src/components/line/TrainLine.css
@@ -60,12 +60,14 @@ svg {
 }
 
 .station-name {
-  margin: 10px 0 0 0;
   font-size: 24px;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   font-weight: normal;
   color: #555;
+  height: 48px; 
+  overflow: hidden;
+  white-space: pre-line;
 }
 
 .active {
@@ -102,6 +104,8 @@ svg {
   font-weight: normal;
   color: #555;
 }
+
+
 
 @media only screen and (max-width: 800px) {
   .train-line {
