--- a/frontend/src/components/app/keyboard/Keyboard.module.css
+++ b/frontend/src/components/app/keyboard/Keyboard.module.css
@@ -1,5 +1,5 @@
 .container{
-    display: flex;
+  display: flex;
 }
 
 .keyboard {
@@ -10,14 +10,12 @@
 }
 
 .key {
-    width:12%;
-    
-    height: 100%; 
+  width:12%;    
+  height: 100%; 
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.3);
   background: ivory;
   cursor: pointer;
   border-radius: 6px;
-  transition: 1s;
   color: rgba(255,255,255, .3);
 }
 
@@ -59,5 +57,21 @@
 }
 .blackKey5{
   margin-left: 67.6%;
+}
+
+.hid{
+  position: absolute;
+  top: -1000px;
+  right:10%;
+  visibility: hidden;
+  transition: 0.5s;
+}
+.vis{
+  position: absolute;
+  right:10%;
+  top: 100px;
+  visibility: visible;
+  transition: 0.5s;
+
 }
 
