--- a/frontend/src/components/homepage/Homepage.module.css
+++ b/frontend/src/components/homepage/Homepage.module.css
@@ -245,3 +245,17 @@ input:checked + label:after {
 .tubeicons {
   display: flex;
 }
+.pianoButton {
+  display: flex;
+  border: solid 1px #999;
+  background-color: #fff;
+  border-radius: 12px;
+  margin-left: auto;
+  width: 100px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.pianoButton img {
+  padding: 14px;
+  width: 55px;
+  margin-top: 6px;
+}
