--- a/frontend/src/components/app/audioControl/AudioControl.module.css
+++ b/frontend/src/components/app/audioControl/AudioControl.module.css
@@ -21,7 +21,7 @@
 }
 .speaker img {
   width: 68px;
-  padding: 18px;
+  padding: 0;
 }
 
 .instruct {
@@ -30,16 +30,14 @@
   font-size: 1.5rem;
 }
 
-input {
-  display: inline-block !important;
-  border-radius: 0 !important;
-  border-width: 2px;
-  border-style: inset;
-  border-color: initial;
-  padding: 1px 2px;
-  font-size: initial;
-  line-height: normal;
-  font-family: initial;
-  color: initial;
-  background-color: initial;
+.volume{
+  display:flex;
+  flex-direction: column;
+  width:140px;
+  font-size: 0.8rem;
 }
+.volume input[type="range"]{
+ 
+  width:80px;
+}
+
