--- a/frontend/src/components/app/audioControl/AudioControl.module.css
+++ b/frontend/src/components/app/audioControl/AudioControl.module.css
@@ -1,49 +1,46 @@
 .playnpause {
-    transition: 0.3s;
+  transition: 0.3s;
 }
 
-.playnpause img{
-    padding:8px;
-    width:56px;
-    margin:12px 0 2px 12px;
-
+.playnpause img {
+  padding: 8px;
+  width: 56px;
+  margin: 12px 0 2px 12px;
 }
-.playnpause:hover{
-    transform: scale(1.1);
-    cursor: pointer;
-
+.playnpause:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
-.container{
-    display: flex;
-    max-height: 12px;
+.container {
+  display: flex;
+  max-height: 12px;
 }
 
-.speaker{
-margin-left: auto;
+.speaker {
+  margin-left: auto;
 }
-.speaker img{
-    width:68px;
-    padding: 18px;
-
-}
-
-.instruct{
-    justify-content: left;
-    padding: 14px;
-    font-size: 1.8rem;
+.speaker img {
+  width: 68px;
+  padding: 8px 12px 6px 0;
 }
 
+.instruct {
+  justify-content: left;
+  padding: 14px;
+  font-size: 1.5rem;
+}
 
-input {
-    display: inline-block !important;
-    border-radius: 0 !important;
-    border-width: 2px;
-    border-style: inset;
-    border-color: initial;
-    padding: 1px 2px;
-    font-size: initial;
-    line-height: normal;
-    font-family: initial;
-    color: initial;
-    background-color: initial;
-  }
+.volume, .zoom{
+  display:flex;
+  flex-direction: column;
+  width:140px;
+  font-size: 0.8rem;
+  align-items: center;
+}
+.volume input[type="range"]{
+ 
+  width:76px;
+}
+.volumeText{
+text-align: center;
+}
