--- a/frontend/src/components/trackList/TrackList.module.css
+++ b/frontend/src/components/trackList/TrackList.module.css
@@ -413,3 +413,70 @@
     transition: opacity .3s ease-in-out;
     border-radius: 10px;
 }
+.hammersmith.off::before{
+    content: '';
+    background: linear-gradient(45deg, #F3A9BB, #f2c4d0);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.hammersmith.on::before {
+    content: '';
+    background: linear-gradient(45deg, #F3A9BB, #f2c4d0);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.circle.off::before{
+    content: '';
+    background: linear-gradient(45deg, #FFD300, #dbbd28);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.circle.on::before {
+    content: '';
+    background: linear-gradient(45deg, #FFD300, #dbbd28);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
