--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -7,10 +7,11 @@
     max-width: 100%;
     padding-bottom: 44px;
     border-radius: 4px;
-    background-color: #cddef6;
     margin: auto;
     margin-top: 0;
     padding: 44px;
     min-height: 400px;
+    background: linear-gradient(-45deg, #f59173, #f76aa0, #f39cf6, #86d8f6, #a0e1d2);
+    animation: gradient 15s ease infinite;
     
 }
