--- a/frontend/src/components/line/TrainLine.css
+++ b/frontend/src/components/line/TrainLine.css
@@ -65,7 +65,7 @@ svg {
   letter-spacing: 1px;
   font-weight: normal;
   color: #555;
-  height: 48px; 
+  height: 48px;
   overflow: hidden;
   white-space: pre-line;
 }
@@ -76,7 +76,7 @@ svg {
 
 .line-container {
   display: flex;
-  justify-content: flex-start;;
+  justify-content: flex-start;
   min-width: 1000px;
   margin-left: 3300px;
 }
@@ -132,5 +132,5 @@ svg {
   stroke: black;
   stroke-width: 4px;
   animation-name: pulse;
-  animation-duration: 3s;  
+  animation-duration: 3s;
 }
