--- a/frontend/src/components/features/Features.css
+++ b/frontend/src/components/features/Features.css
@@ -23,3 +23,14 @@
   background-color: #bc52a0;
   color: rgb(207, 205, 208);
 }
+
+.features-title {
+  text-align: center;
+  box-shadow: 300px;
+  color: linear-gradient(45deg, #0019a8, #e10808);
+  background-color: linear-gradient(45deg, #0019a8, #e10808);
+  font-size: 17px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-style:oblique;
+}
